Correction for concurrent modification error following auto-code-replace.